# logicario

./: .clang-format  CMakeLists.txt  CMakePresets.json  vcpkg.json
resources/images/: atlas.pdn
resources/shaders/background/: fragment.glsl  vertex.glsl
resources/shaders/main/: fragment.glsl  vertex.glsl
resources/shaders/rect/: vertex.glsl
resources/shaders/sprite/: vertex.glsl
source/: main.cpp
source/engine/: action.hpp  filesystem.hpp  input.hpp  keycode.hpp  window.hpp
source/engine/platform/: glfw_input.cpp  glfw_input.hpp  glfw_window.cpp  glfw_window.hpp  ogl_renderer.cpp  std_filesystem.cpp  std_filesystem.hpp
sources/: boundy_box.cpp  boundy_box.hpp  main.cpp  quadtree.cpp  quadtree.hpp
sources/engine/: action.hpp  filesystem.hpp  image.hpp  input.hpp  keycode.hpp  renderer.hpp  resource.hpp  shader.hpp  sprite.cpp  sprite.hpp  texture.hpp  transform.cpp  transform.hpp  types.hpp  view.cpp  view.hpp  view_impl.hpp  window.hpp
sources/engine/platform/: glfw_input.cpp  glfw_input.hpp  glfw_window.cpp  glfw_window.hpp  ogl_renderer.cpp  ogl_renderer.hpp  ogl_shader.cpp  ogl_shader.hpp  ogl_texture.cpp  ogl_texture.hpp  ogl_view_impl.cpp  ogl_view_impl.hpp  std_filesystem.cpp  std_filesystem.hpp
sources/engine/ui/: bordered_view.hpp  corner_stick.hpp  corner_view.hpp  framebuffer_filler.hpp  main_view.hpp  rect_view.hpp  view_controller.hpp
